Fix alignment of "share with" column
Radio inputs break under each other because the text is too long.
Instead of the radio use a checkbox

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,29 @@
-@media print,screen and (min-width:769px) {
+.app-content {
+	margin-left: 20%;
+	width: 60%;
+}
+
+@media print,screen and (max-width: 1408px) {
 	.app-content {
-		margin-left: 20%;
-		width: 60%;
+		margin-left: 15%;
+		width: 70%;
 	}
 }
+
+@media print,screen and (max-width: 1216px) {
+	.app-content {
+		margin-left: 15%;
+		width: 70%;
+	}
+}
+
+@media print,screen and (max-width: 769px) {
+	.app-content {
+		margin-left: 10%;
+		width: 80%;
+	}
+}
+
 
 .header-main {
 	padding: 1rem 3rem;
